--- a/templates/Felix.xml
+++ b/templates/Felix.xml
@@ -1,10 +1,9 @@
 <templateSet group="Felix">
-  <template name="*" value="*&#10; * $desc$&#10; * $VAR1$&#10;$params$ * @return $returns$&#10; * @throws $throws$&#10; * @author $user$&#10; * @date $date$&#10; */" description="java 方法注释" toReformat="false" toShortenFQNames="true">
+  <template name="*" value="*&#10; * $desc$&#10; * $VAR1$&#10;$params$ * @return $returns$&#10; * @author $user$&#10; * @date $date$&#10; */" description="java 方法注释" toReformat="false" toShortenFQNames="true">
     <variable name="desc" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="VAR1" expression="groovyScript(&quot;def result='';  def params=\&quot;${_1}\&quot;.replaceAll('[\\\\[|\\\\]|\\\\s]', '').split(',').toList();   for(i = 0; i &lt; params.size(); i++) {   &#9;if(i!=0)result+= '* ';    &#9;result+='@param ' + params[i] + ((i &lt; (params.size() - 1)) ? '\\n' + '\\t' : '');   };    return result&quot;, methodParameters()) " defaultValue="" alwaysStopAt="false" />
     <variable name="params" expression="" defaultValue="" alwaysStopAt="false" />
     <variable name="returns" expression="methodReturnType()" defaultValue="" alwaysStopAt="false" />
-    <variable name="throws" expression="regularExpression(String, Pattern, Replacement)" defaultValue="" alwaysStopAt="true" />
     <variable name="user" expression="user()" defaultValue="" alwaysStopAt="false" />
     <variable name="date" expression="date()" defaultValue="" alwaysStopAt="false" />
     <context>
